--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
     <section class="navigation show" id="header">
         <div class="nav-container">
             <div class="brand">
-                <a href="#!"><img src="img/SMKN_2_Jakarta-removebg-preview.png" alt=""></a>
+                <img src="img/smk-Recovered.png" alt="">
             </div>
             <nav>
                 <div class="nav-mobile"><a id="navbar-toggle" href="#!"><span></span></a></div>
@@ -108,6 +108,7 @@
             </nav>
         </div>
     </section>
+
     <!--Form Content-->
     <div class="container-form">
         <div class="card">
@@ -167,6 +168,29 @@
             </div>
         </div>
     </div>
+
+    <!-- FOOTER & MEDSOS -->
+    <footer class="pt-5">
+        <div class="poter mt-0">
+            <div class="icons text-center">
+                <div class="wrap_6">
+                    <p>|| Pengembangan Perangkat Lunak dan Gim SMKN 2 Jakarta ||</p>
+                    <div class="icon_medsos">
+                        <a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-tiktok fa-2xl"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>Copyright &copy; 2023 - PPLG_1. All Right Reserved</p>
+            </div>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
