--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
 
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <link href="https://fonts.googleapis.com/css2?family=Domine&family=Poppins&display=swap" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
 
-    
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Gloock&family=Lora:ital,wght@0,600;1,400&family=Noto+Serif:wght@700&family=Playfair+Display&family=Poppins:wght@600&family=Tilt+Prism&family=Varela+Round&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -52,7 +57,7 @@
     <section class="navigation">
         <div class="nav-container">
             <div class="brand">
-                <a href="#!"><img src="img/SMKN_2_Jakarta-removebg-preview.png" alt=""></a>
+                <img src="img/smk-Recovered.png" alt="">
             </div>
             <nav>
                 <div class="nav-mobile"><a id="navbar-toggle" href="#!"><span></span></a></div>
@@ -115,7 +120,8 @@
         <iframe width="1000" height="560" src="https://www.youtube.com/embed/SZ6eG_l40lo" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+            allowfullscreen>
+        </iframe>
     </div>
 
     <!-- CONTENT KEEMPAT -->
@@ -129,11 +135,20 @@
             <h4 style="text-align: center;">Dra, Murni Astuti ,M.M</h4>
             <p>Assalamualaikum warahmatullahi wabarakatuh <br>
 
-                Puji syukur kita panjatkan kehadirat Allah SWT karena atas rahmat dan hidayahnya kita masih diberikan kesempatan untuk mengabdi dan memberikan yang terbaik bagi kemajuan pendidikan di Indonesia. Dan berkat karunianya jualah kami dapat menyusun website SMK Negeri 2 Jakarta ini.
+                Puji syukur kita panjatkan kehadirat Allah SWT karena atas rahmat dan hidayahnya kita masih diberikan
+                kesempatan untuk mengabdi dan memberikan yang terbaik bagi kemajuan pendidikan di Indonesia. Dan berkat
+                karunianya jualah kami dapat menyusun website SMK Negeri 2 Jakarta ini.
                 <br><br>
-                Website SMK Negeri 2 Jakarta ini bertujuan untuk memberikan informasi singkat kepada seluruh masyarakat yang membutuhkan. Sehingga masyarakat dapat lebih mengetahui dan mengenal secara umum SMK Negeri 2 Jakarta. Lebih dari 60 tahun kami mendidik sumberdaya manusia dibidang SMK, dan seiring dengan perkembangannya kini SMK Negeri 2 Jakarta menjadi salah satu sekolah terbaik di Jakarta. Dengan penerapan Sistem Manajemen kami selalu berusaha meningkatkan mutu, kualitas dan kepuasan bagi seluruh stake holder yang ada.
+                Website SMK Negeri 2 Jakarta ini bertujuan untuk memberikan informasi singkat kepada seluruh masyarakat
+                yang membutuhkan. Sehingga masyarakat dapat lebih mengetahui dan mengenal secara umum SMK Negeri 2
+                Jakarta. Lebih dari 60 tahun kami mendidik sumberdaya manusia dibidang SMK, dan seiring dengan
+                perkembangannya kini SMK Negeri 2 Jakarta menjadi salah satu sekolah terbaik di Jakarta. Dengan
+                penerapan Sistem Manajemen kami selalu berusaha meningkatkan mutu, kualitas dan kepuasan bagi seluruh
+                stake holder yang ada.
                 <br><br>
-                Akhir kata kami selaku Kepala SMK Negeri 2 Jakarta, menyampaikan terima kasih kepada semua pihak yang telah berperan aktif dalam membantu dan mengembangkan SMK ini. Semoga dengan diluncurkannya website ini dapat memberikan informasi bagi anda yang membutuhkan.
+                Akhir kata kami selaku Kepala SMK Negeri 2 Jakarta, menyampaikan terima kasih kepada semua pihak yang
+                telah berperan aktif dalam membantu dan mengembangkan SMK ini. Semoga dengan diluncurkannya website ini
+                dapat memberikan informasi bagi anda yang membutuhkan.
                 <br><br>
                 Wassalamualaikum warahmatullahi wabarakatuh</p>
         </div>
@@ -190,7 +205,6 @@
                             <h5 class="card-title">Dra. Sukarti
                             </h5>
                             <p class="card-text">(Kepala Program OTKP)</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
@@ -200,7 +214,6 @@
                         <div class="card-body">
                             <h5 class="card-title">Drs. Kadirah, M.M.Pd</h5>
                             <p class="card-text">(Wali Kelas RPL1)</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
@@ -209,8 +222,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Abdul Halik, S.Pd</h5>
-                            <p class="card-text">Wali Kelas BDPM</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">(Wali Kelas BDPM)</p>
                         </div>
                     </div>
                 </div>
@@ -225,7 +237,6 @@
                             <h5 class="card-title">Laurensius Try Andy
                             </h5>
                             <p class="card-text">(Guru MM)</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
@@ -235,7 +246,6 @@
                         <div class="card-body">
                             <h5 class="card-title">Drs. Rustadi </h5>
                             <p class="card-text">(Guru Bahasa Indonesia)</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
@@ -245,7 +255,6 @@
                         <div class="card-body">
                             <h5 class="card-title">Dra. Yeti Suhayati</h5>
                             <p class="card-text">(Wali Kelas OTKP)</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -254,33 +263,30 @@
                 <div class="cards-wrapper">
                     <div class="card">
                         <div class="image-wrapper">
-                            <img src="img/Guru/PAK RUS.jpeg" alt="...">
+                            <img src="img/Guru/om suhen.jpeg" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text"></p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Drs. Suhendra, MT</h5>
+                            <p class="card-text">(Guru RPL)</p>
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
                         <div class="image-wrapper">
-                            <img src="img/Guru/bu eni.jpeg" alt="...">
+                            <img src="img/Guru/bu ros.jpeg" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Rosmiati,SH</h5>
+                            <p class="card-text">(Wali Kelas RPL2)</p>
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
                         <div class="image-wrapper">
-                            <img src="img/Guru/bu nila.jpeg" alt="...">
+                            <img src="img/Guru/bu mas.jpeg" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Dra. Eni Rohmani, Msi
+                            <h5 class="card-title">Dra. Masyitoh
                             </h5>
-                            <p class="card-text">(Guru OTKP)</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">(Guru Sejarah)</p>
                         </div>
                     </div>
                 </div>
@@ -289,35 +295,30 @@
                 <div class="cards-wrapper">
                     <div class="card">
                         <div class="image-wrapper">
-                            <img src="img/pexels-ezra-comeau-2387418.jpg" alt="...">
+                            <img src="img/Guru/bu bas.jpeg" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Dra. Siti Bastiyah </h5>
+                            <p class="card-text">(Guru BK)</p>
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
                         <div class="image-wrapper">
-                            <img src="img/pexels-pixabay-147411.jpg" alt="...">
+                            <img src="img/Guru/pak adi.jpeg" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Adhieferdhian
+                            </h5>
+                            <p class="card-text">(Guru RPL)</p>
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
                         <div class="image-wrapper">
-                            <img src="img/pexels-pixabay-147411.jpg" alt="...">
+                            <img src="img/Guru/pak priya.jpeg" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Try Pria</h5>
+                            <p class="card-text">(Guru AKL)</p>
                         </div>
                     </div>
                 </div>
@@ -326,35 +327,30 @@
                 <div class="cards-wrapper">
                     <div class="card">
                         <div class="image-wrapper">
-                            <img src="img/pexels-ezra-comeau-2387418.jpg" alt="...">
+                            <img src="img/Guru/pak denny.jpeg" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Denny Marpaung, S.Pd</h5>
+                            <p class="card-text">(Guru Seni)</p>
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
                         <div class="image-wrapper">
-                            <img src="img/pexels-pixabay-147411.jpg" alt="...">
+                            <img src="img/Guru/pak afandi.jpeg" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Afandi Muhajirin, S.Pdi</h5>
+                            <p class="card-text">(Guru PAI)</p>
+
                         </div>
                     </div>
                     <div class="card d-none d-md-block">
                         <div class="image-wrapper">
-                            <img src="img/pexels-pixabay-147411.jpg" alt="...">
+                            <img src="img/Guru/karti.jpeg" alt="...">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Dra. Sukarti </h5>
+                            <p class="card-text">(Kepala Program OTKP)</p>
                         </div>
                     </div>
                 </div>
@@ -373,22 +369,24 @@
     <!-- FOOTER and MEDIA SOSIAL -->
     <footer>
         <div class="poter mt-0">
-            <div class="icons text-center">
-                <div class="wrap_6">
-                    <p>|| Pengembangan Perangkat Lunak dan Gim SMKN 2 Jakarta ||</p>
-                    <div class="icon_medsos">
-                        <a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a>
-                        <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter fa-2xl"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-                        <a href=""><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
-                        <a href=""><i class="fa-brands fa-tiktok fa-2xl"></i></a>
-                    </div>
-                </div>
+          <div class="icons text-center">
+            <div class="wrap_6">
+              <p>|| Pengembangan Perangkat Lunak dan Gim SMKN 2 Jakarta ||</p>
+              <div class="icon_medsos">
+                <a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a href=""><i class="fa-brands fa-twitter fa-2xl"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                <a href=""><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+                <a href=""><i class="fa-brands fa-tiktok fa-2xl"></i></a>
+              </div>
             </div>
-            <p>Copyright &copy; 2023 - PPLG_1. All Right Reserved</p><br>
+          </div>
+          <div class="copyright">
+            <p>Copyright &copy; 2023 - PPLG_1. All Right Reserved</p>
+          </div>
         </div>
-    </footer>
+      </footer>
 
 
     <script src="script.js"></script>
