--- a/jurusan.html
+++ b/jurusan.html
@@ -46,8 +46,8 @@
     <!-- NAVBAR -->
     <section class="navigation">
         <div class="nav-container">
-            <div class="brand">
-                <a href="#!"><img src="img/SMKN_2_Jakarta-removebg-preview.png" alt=""></a>
+           <div class="brand">
+                <img src="img/smk-Recovered.png" alt="">
             </div>
             <nav>
                 <div class="nav-mobile"><a id="navbar-toggle" href="#!"><span></span></a></div>
@@ -69,7 +69,7 @@
                         <a href="contact.html">Contact</a>
                     </li>
                     <li class="btn-cta">
-                        <input type="text" placeholder="Search.." name="search">
+                        <input type="text" placeholder=" Search.." name="search">
                         <button type="submit"><i class="fa fa-search"></i></button>
                     </li>
                 </ul>
@@ -79,7 +79,7 @@
 
     <!-- CONTENT PERTAMA -->
     <!-- PPLG -->
-    <div class="container-jurusan">
+    <div class="section_jrs">
         <h2>Jurusan</h2>
         <div class="wrap_list">
             <div class="list_1">
@@ -101,30 +101,28 @@
                         </p>
                     </div>
                 </div>
-                <a href="/prog_jrs/pplg.html">
-                    <div class="container_jrs">
-                        <div class="card_jrs">
-                            <div class="head-card-jrs">
-                                <img src="gambar/CyberSecurity.jpeg" alt="">
-                            </div>
-                            <div class="body-card-jrs">
-                                <a href="/prog_jrs/pplg.html">
-                                    <h1>Cyber Security</h1>
-                                </a>
-                                <p>Cyber Security program jurusan pplg dibutuhkan untuk memberikan penyuluhan tentang
-                                    keamanan cyber dalam penggunaan internet.</p>
-                                <a href="prog_jrs/pplg.html"><button class="custom-btn btn-3"><span>Read
-                                            More</span></button></a>
-                            </div>
+                <div class="container_jrs">
+                    <div class="card_jrs mt-4">
+                        <div class="head-card-jrs">
+                            <img src="gambar/CyberSecurity.jpeg" alt="">
+                        </div>
+                        <div class="body-card-jrs">
+                            <a href="/prog_jrs/pplg.html">
+                                <h1>Cyber Security</h1>
+                            </a>
+                            <p>Cyber Security program jurusan pplg dibutuhkan untuk memberikan penyuluhan tentang
+                                keamanan cyber dalam penggunaan internet.</p>
+                            <a href="prog_jrs/pplg.html"><button class="custom-btn btn-3"><span>Read
+                                        More</span></button></a>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- DKV -->
-    <div class="container-jurusan pl-0">
+    <div class="section_jrs pl-0">
         <div class="wrap_list">
             <div class="list_1">
                 <div class="container_jrs">
@@ -134,7 +132,9 @@
                         </div>
                         <div class="body-card-jrs">
                             <h1>Desain</h1>
-                            <p> jurusan ini banyak diminati oleh siswa dan siswi karena memiliki program kerja yang luas. jurusan ini tidak hanya mempelajari tentang desain tapi juga pembuatan web dasar. </p>
+                            <p> jurusan ini banyak diminati oleh siswa dan siswi karena memiliki program kerja yang
+                                luas. jurusan ini tidak hanya mempelajari tentang desain tapi juga pembuatan web dasar.
+                            </p>
                             <a href="/prog_jrs/dkv.html"><button class="custom-btn btn-3"><span>Read
                                         More</span></button></a>
                         </div>
@@ -160,7 +160,7 @@
     </div>
 
     <!-- AKL -->
-    <div class="container-jurusan">
+    <div class="section_jrs">
         <div class="wrap_list">
             <div class="list_1">
                 <div class="explan_jrs">
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="container_jrs">
-                    <div class="card_jrs">
+                    <div class="card_jrs mt-4">
                         <div class="head-card-jrs">
                             <img src="gambar/Bank Mini 1.jpeg" alt="">
                         </div>
@@ -194,7 +194,7 @@
     </div>
 
     <!-- MPLB -->
-    <div class="container-jurusan pr-4">
+    <div class="section_jrs pr-4">
         <div class="wrap_list">
             <div class="list_1">
                 <div class="container_jrs">
@@ -238,7 +238,7 @@
     </div>
 
     <!-- BDP -->
-    <div class="container-jurusan">
+    <div class="section_jrs">
         <div class="wrap_list">
             <div class="list_1">
                 <div class="explan_jrs">
@@ -255,7 +255,7 @@
                     </div>
                 </div>
                 <div class="container_jrs">
-                    <div class="card_jrs">
+                    <div class="card_jrs mt-4">
                         <div class="head-card-jrs">
                             <img src="gambar/Dwi Mart 1.jpeg" alt="">
                         </div>
@@ -279,9 +279,7 @@
         <div class="poter mt-0">
             <div class="icons text-center">
                 <div class="wrap_6">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quibusdam corrupti facere
-                        praesentium quod fugit nulla quam aliquid asperiores ratione? Minima fugiat atque ratione
-                        dolorum architecto consequuntur suscipit distinctio repudiandae!</p>
+                    <p>|| Pengembangan Perangkat Lunak dan Gim SMKN 2 Jakarta ||</p>
                     <div class="icon_medsos">
                         <a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a>
                         <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
@@ -292,7 +290,9 @@
                     </div>
                 </div>
             </div>
-            <p>Copyright &copy; 2023 - PPLG_1. All Right Reserved</p><br>
+            <div class="copyright">
+                <p>Copyright &copy; 2023 - PPLG_1. All Right Reserved</p>
+            </div>
         </div>
     </footer>
 
