--- a/prog_jrs/pmsr.html
+++ b/prog_jrs/pmsr.html
@@ -46,7 +46,7 @@
     <section class="navigation" >
         <div class="nav-container">
             <div class="brand">
-                <a href="#!"><img src="/img/SMKN_2_Jakarta-removebg-preview.png" alt=""></a>
+                <img src="img/smk-Recovered.png" alt="">
             </div>
             <nav>
                 <div class="nav-mobile"><a id="navbar-toggle" href="#!"><span></span></a></div>
@@ -110,6 +110,28 @@
         <img src="New folder/galeri/bdp 1.jpg" alt="">
     </div>
 
+
+    <!-- FOOTER & MEDSOS -->
+    <footer>
+        <div class="poter mt-0">
+            <div class="icons text-center">
+                <div class="wrap_6">
+                    <p>|| Pengembangan Perangkat Lunak dan Gim SMKN 2 Jakarta ||</p>
+                    <div class="icon_medsos">
+                        <a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-tiktok fa-2xl"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>Copyright &copy; 2023 - PPLG_1. All Right Reserved</p>
+            </div>
+        </div>
+    </footer>
     <script src="/script.js"></script>
 </body>
 
