--- a/galeri.html
+++ b/galeri.html
@@ -36,8 +36,10 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
 
     <script type="text/javascript" src="./fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+
     <link rel="stylesheet" type="text/css" href="./fancybox/jquery.fancybox-1.3.4.css" media="screen" />
     <link rel="stylesheet" href="style.css" />
+
     <script type="text/javascript">
         $(document).ready(function () {
             /*
@@ -120,6 +122,8 @@
         });
     </script>
     <script src="script.js"></script>
+    <style>
+    </style>
 </head>
 
 <body>
@@ -136,7 +140,7 @@
     <section class="navigation">
         <div class="nav-container">
             <div class="brand">
-                <a href="#!" id="inline"><img src="img/SMKN_2_Jakarta-removebg-preview.png" alt=""></a>
+                <img src="img/smk-Recovered.png" alt="">
             </div>
             <nav>
                 <div class="nav-mobile"><a id="navbar-toggle" href="#!"><span></span></a></div>
@@ -205,9 +209,9 @@
                 <img alt="" src="prog_jrs/New folder/2/foto20.jpeg" /></a>
             <a rel="example_group" href="prog_jrs/New folder/1/foto21.jpg" title="">
                 <img alt="" src="prog_jrs/New folder/2/foto21.jpg" /></a>
-            <a rel="example_group" href="prog_jrs/New folder/1/foto23.jpeg" title="">
+            <a rel="example_group" href="prog_jrs/New folder/1/foto23.jpg" title="">
                 <img alt="" src="prog_jrs/New folder/2/foto23.jpg" /></a>
-            <a rel="example_group" href="prog_jrs/New folder/1/foto24.jpg" title="">
+            <a rel="example_group" href="prog_jrs/New folder/1/foto24.jpeg" title="">
                 <img alt="" src="prog_jrs/New folder/2/foto24.jpeg" /></a>
             <a rel="example_group" href="prog_jrs/New folder/1/foto25.jpeg" title="">
                 <img alt="" src="prog_jrs/New folder/2/foto25.jpeg" /></a>
@@ -231,20 +235,42 @@
                 <img alt="" src="prog_jrs/New folder/2/foto35.jpeg" /></a>
             <a rel="example_group" href="prog_jrs/New folder/1/foto36.jpeg" title="">
                 <img alt="" src="prog_jrs/New folder/2/foto36.jpeg" /></a>
-            <a rel="example_group" href="prog_jrs/New folder/1/foto37.jpeg" title="">
+            <a rel="example_group" href="prog_jrs/New folder/1/foto37.jpg" title="">
                 <img alt="" src="prog_jrs/New folder/2/foto37.jpg" /></a>
             <a rel="example_group" href="prog_jrs/New folder/1/foto38.jpg" title="">
                 <img alt="" src="prog_jrs/New folder/2/foto38.jpg" /></a>
-            <a rel="example_group" href="prog_jrs/New folder/1/foto39.jpg" title="">
+            <a rel="example_group" href="prog_jrs/New folder/1/foto39.jpeg" title="">
                 <img alt="" src="prog_jrs/New folder/2/foto39.jpeg" /></a>
             <a rel="example_group" href="prog_jrs/New folder/1/foto40.jpg" title="">
                 <img alt="" src="prog_jrs/New folder/2/foto40.jpg" /></a>
 
-
-
+                <footer class="pt-3">
+                    <div class="poter mt-0">
+                        <div class="icons text-center">
+                            <div class="wrap_6">
+                                <p>|| Pengembangan Perangkat Lunak dan Gim SMKN 2 Jakarta ||</p>
+                                <div class="icon_medsos">
+                                    <a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                                    <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                                    <a href=""><i class="fa-brands fa-twitter fa-2xl"></i></a>
+                                    <a href=""><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                                    <a href=""><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+                                    <a href=""><i class="fa-brands fa-tiktok fa-2xl"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="copyright">
+                            <p>Copyright &copy; 2023 - PPLG_1. All Right Reserved</p>
+                        </div>
+                    </div>
+                </footer>
+            
         </div>
     </div>
 
+
+    <!-- FOOTER & MEDSOS -->
+    
     <script src="script.js"></script>
 
 </body>
